# buzuki

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .travis.yml  DEPLOY.md  Gruntfile.js  Makefile  README.md  TODO.md  check.py  config.py  manage.py  package-lock.json  package.json  pyproject.toml  refactor_playlists.py  requirements.txt
buzuki/: __init__.py  artists.py  cache_utils.py  decorators.py  elastic.py  mixins.py  models.py  playlists.py  related.py  scales.py  scales.yml  sessions.py  songs.py  sw.js  utils.py  views.py
buzuki/admin/: forms.py  views.py
buzuki/api/: views.py
buzuki/static/: autocomplete.js  cookiealert.css  cookiealert.js  cookieconsent.js  manifest.webmanifest  playlists.js  registersw.js  style.css  transpose.js  utils.js
buzuki/static/sw/: sw.js
buzuki/templates/: 404.html  artists.html  base.html  index.html  list.html  scale.html  scales.html  song.html  songprint.html
buzuki/templates/admin/: admin.html  formhelpers.html  login.html  songform.html
buzuki/templates/partials/: songlist.html  transpose.html
nginx/: letsencrypt.sh  nginx.conf
scripts/: buzuki-search.service  buzuki-watch.service  buzuki-watch.sh  buzuki.service  deploy.sh  elastic.sh  install-services.sh
tests/: conftest.py  factories.py  test_admin.py  test_api.py  test_artists.py  test_cache.py  test_playlists.py  test_scales.py  test_sessions.py  test_songs.py  test_utils.py  test_views.py
