[tool.poetry]
name = "buzuki"
version = "0.1.0"
description = "A minimalistic web app for displaying and transposing Greek song chords."
authors = ["Panagiotis Ktistakis <panktist@gmail.com>"]
license = "AGPL-3.0"

readme = "README.md"

repository = "https://gitlab.com/forkbong/buzuki"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1"
flask-wtf = "^0.14.2"
pyyaml = "^5.1"
gunicorn = "^20.1"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-deprecated = "*"
pytest = "*"
coverage = "*"
isort = "*"
ipython = "*"
ipdb = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
