[tool.poetry]
name = "buzuki"
version = "0.1.0"
description = "A minimalistic web app for displaying and transposing Greek song chords."
authors = ["Panagiotis Ktistakis <panktist@gmail.com>"]
license = "AGPL-3.0"

readme = "README.md"

repository = "https://gitlab.com/forkbong/buzuki"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0"
cachelib = "^0.10"
redis = "^5.0"
flask-wtf = "^1.2"
pyyaml = "^6.0"
elasticsearch = "^7.17"
gunicorn = "^21.2"
requests = "^2.27"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-deprecated = "*"
pytest = "*"
coverage = "*"
isort = "*"
ipython = "*"
ipdb = "*"
youtube-dl = "*"
mutagen = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
